img overflow bug fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,3 +84,9 @@ a {
 		cursor: pointer;
 	}
 }
+
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
